--- a/Portfolio.html
+++ b/Portfolio.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi Portafolio</title>
+  <title>Mi Portfolio</title>
 </head>
 
 <style>
@@ -69,4 +69,5 @@
 
 
 </body>
+
 </html>
